package com.example.fitcoach.models;

public enum WeightCategory {
    UNDERWEIGHT,
    NORMAL,
    OVERWEIGHT
}
